--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "engines": {
     "node": "0.12.7",
     "npm": "2.14.1"
-  },  
+  },
   "dependencies": {
     "bcrypt": "^0.8.5",
+    "connect-mongo": "^0.8.2",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
