--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "request": "^2.61.0",
     "request-promise": "^0.4.3",
     "sails": "~0.11.0",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.11.4"
   },
   "scripts": {
     "debug": "node debug app.js",
