fix service that didnt return data properly

--- a/.sailsrc
+++ b/.sailsrc
@@ -1,5 +1,10 @@
 {
   "generators": {
     "modules": {}
-  }
+  },
+   "hooks": {
+        "session": false,
+        // also useful when building an API
+        "grunt": false
+   }  
 }
